--- a/tiny/home.html
+++ b/tiny/home.html
@@ -2,6 +2,7 @@
 <head><title>test</title></head>
 <body> 
 <img align="middle" src="godzilla.gif">
+<video src="MP4__5MG.mp4" controls loop width="500px"></video>
 Dave O'Hallaron
 </body>
 </html>
